# vergissmeinnicht-kde

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.de.md  README.md
.github/: release-footer.md
.github/workflows/: ci.yml  release.yml
app/: .qmlls.ini  Cargo.toml  build.rs
app/cpp/: grabwindow.cpp  grabwindow.h  inputsim.cpp  inputsim.h  klocalized.cpp  klocalized.h
app/qml/: AboutDialog.qml  DetailDialog.qml  FormWindow.qml  HelpDialog.qml  Main.qml  QuickCaptureDialog.qml  SettingsDialog.qml  Sidebar.qml  TaskDelegate.qml  TasksPage.qml
app/src/: backup.rs  bridge.rs  config.rs  filters.rs  main.rs  parsers.rs  secrets.rs  state.rs  urgency.rs
core/: Cargo.toml
core/examples/: seed_demo.rs  sync_roundtrip.rs
core/src/: lib.rs
core/tests/: cli_coexistence.rs  replica_roundtrip.rs
data/: de.hnsstrk.vergissmeinnicht.desktop  de.hnsstrk.vergissmeinnicht.metainfo.xml
docs/: architecture.md  backup-and-restore.md  building.md
po/: en.po  vergissmeinnicht.pot
scripts/: install-local.sh
