[workspace]
resolver = "2"
members = ["core", "app"]

[workspace.package]
version = "0.2.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/hnsstrk/vergissmeinnicht-kde"

[workspace.dependencies]
taskchampion = { version = "3.0.1", features = ["storage-sqlite"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0"

cxx = "1"
cxx-qt = "0.9.1"
cxx-qt-lib = { version = "0.9.1", features = ["full"] }
cxx-qt-build = { version = "0.9.1", features = ["link_qt_object_files"] }

[profile.release]
lto = true
