[package]
name = "vergissmeinnicht-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vergissmeinnicht"
path = "src/main.rs"

[dependencies]
vergissmeinnicht-core = { path = "../core" }
cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
# Gleiche rusqlite-Version wie taskchampion — zwei libsqlite3-sys-Versionen
# können nicht koexistieren (native `links`-Grenze).
rusqlite = "0.39"
keyring = { version = "3", features = ["sync-secret-service"] }
notify-rust = "4"
uuid.workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cxx-qt-build.workspace = true
